# LLVM

tests/: test_mba-sub.ll
week1/code-examples/: test.cpp  test.ll  test.s  test_arm.ll  test_arm_mem2reg.ll  test_arm_mem2reg.s  test_instcombine.ll  test_loop_unrolled.ll  test_mem2reg.ll  test_opt.ll  test_optimized.ll  x.ll
week1/slides/: Week1-Intro-to-LLVM.pptx
week2/: CMakeLists.txt  README-week2  README-week2.md
week2/code-examples/tests/: output.ll  test.cpp  test.ll  test_mem2reg.ll
week2/slides/: Week2-LLVM -Passes.pptx
week3/slides/: Week3-LLVM -Backend.pptx
week4/: README-week3.md
week4/code-examples/: input.mlir  llvm_dialect.mlir  lowered_to_llvm.mlir  output.ll  step1.mlir  step2.mlir  step3.mlir  test.cpp  test.ll  test.mlir
week4/slides/: Week4-Intro-to-MLIR.pptx
week5/: week5-MLIR-Concepts.pptx
